examples/test/testpolicy2433.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2433
  namespace: namespace180
spec:
  podSelector:
    matchLabels:
      key28: value49
      key48: value3
      key24: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value15
      podSelector:
        matchLabels:
          key25: value31
          key28: value21
